<resources>
    <string name="app_name">KaloriSayac</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="records">Kayıtlar</string>
    <string name="counter">Sayaç</string>
    <string name="options">Seçenekler</string>
    <string name="signOut">Çıkış</string>
    <string name="search">Ara</string>
    <string name="searchFood">Yiyecek Ara</string>
    <string name="previous">Önceki Gün</string>
    <string name="next">Sonraki Gün</string>
    <string name="added">Eklenenler Listesi (listeden çıkarmak için dokun):</string>
    <string name="add">Arama Sonucu (listeye eklemek için dokun):</string>
</resources>